--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -19,7 +19,7 @@ In this scenario you want to test (or just run) an application on a test system 
 The database driver have to be configureable to let the application use dummyjdbc.
 
 ===How to===
-Just add the dummyjdbc.jar to your path and switch your driver to {{{com.google.dummyjdbc.DummyJdbcDriver}}}. If you don't want dummyjdbc to return any data that's all. To let dummyjdbc return results for queries create a folder named {{{tables}}} in the directory of dummyjdbc. In this directory you have to put one file per database table. <br/>
+Just add the dummyjdbc.jar to your path and switch your driver to {{{com.googlecode.dummyjdbc.DummyJdbcDriver}}}. If you don't want dummyjdbc to return any data that's all. To let dummyjdbc return results for queries create a folder named {{{tables}}} in the directory of dummyjdbc. In this directory you have to put one file per database table. <br/>
 *Example:* For the query: {{{SELECT id, name FROM users}}} you have to put the file {{{users.csv}}} in the {{{tables}}} folder. The CSV file have to contain at least the following data:
 {{{
 id, name
