--- a/wiki/BuildingUsingMaven.wiki
+++ b/wiki/BuildingUsingMaven.wiki
@@ -2,21 +2,21 @@
 #labels Featured,Phase-Deploy
 
 = Building using Maven =
-*To build DummyJDBC you have to use Java 6 because in Java 7 new methods were introduced in {{{java.sql}}} which DummyJDBC doesn't override.*
+Beginning with dummyjdbc-1.2 Java 7 is used for the build. In Java 7 new methods were introduced in {{{java.sql}}} which made it necessary to extend dummyjdbc.
 
 To create a jar which only contains the DummyJDBC classes call:
 {{{
 mvn package
 }}}
 
-To create a jar which additionally contains the dependencies (OpenCSV, AspectJ) call
+To create a jar which additionally contains the dependencies (OpenCSV, AspectJ, logback, slf4j) call
 {{{
 mvn package assembly:single
 }}}
 
 = Build Problems =
-== Wrong JDK version ==
-DummyJDBC extends classes from the {{{java.sql}}} package. In some classes new methods were introduced in Java 7.
+== Wrong JDK version (dummyjdbc < 1.2) ==
+DummyJDBC extends classes from the {{{java.sql}}} package. In some classes new methods were introduced in Java 7. This only applies for dummyjdbc before 1.2. Beginning with dummyjdbc-1.2 Java 7 is used for the build.
 
 === Problem ===
 You get the following output from Maven:
